# micap

./: .gitattributes  .gitignore  Cargo.toml  README.md
app/: package.json  pnpm-lock.yaml  vite.config.ts
app/src/: app.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/static/: default.glb
dummy-client/: Cargo.toml
dummy-client/src/: main.rs
firmware/: .clang-format  platformio.ini
firmware/src/: battery_manager.cpp  battery_manager.h  config.h  config_manager.cpp  config_manager.h  consts.h  defines.h  globals.h  internal_led.h  led_manager.cpp  led_manager.h  log.h  main.cpp  math.h  maths.h  protocol_manager.h  serial_commands.cpp  serial_commands.h  serial_manager.cpp  serial_manager.h  wifi_manager.cpp  wifi_manager.h
hardware/case/: MicapExtra.igs  MicapExtraBottom.stl  MicapExtraTop.stl  MicapMain.igs  MicapMainBottom.stl  MicapMainHandle.stl  MicapMainTop.stl
hardware/circuit/: micap_device.fzz
server/: Cargo.toml
server/data/: test.bvh
server/src/: bone.rs  config.rs  lib.rs  looper.rs  main.rs  main_server.rs  math.rs  serial.rs  server_state.rs  skeleton.rs  test.rs  tracker.rs  udp_packet.rs  udp_protocol.rs  udp_server.rs  vmc_server.rs  websocket.rs
server/src/osc/: mod.rs  vmc_connector.rs  vrchat_connector.rs
server/src/record/: bvh_saver.rs  mod.rs  motion_recorder.rs
server/src/skeleton/: bone.rs  mod.rs  skeleton.rs  skeleton_config.rs  skeleton_manager.rs
server/src/udp/: client.rs  device.rs  mod.rs  packet.rs  server.rs
server/src/vmc/: connector.rs  mod.rs  packet.rs
(+87 files in other folders)
