[package]
name = "mycap-server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
warp = "0.3"
serialport = "4"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
glam = { version = "0.28", features = ["serde"] }
byteorder = "1"
