[package]
name = "micap-server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
serialport = "4"
serde = { version = "1.0", features = ["derive", "rc"] }
anyhow = "1"
glam = { version = "0.29", features = ["serde"] }
byteorder = "1"
rosc = "0.10"
tokio-tungstenite = "0.23"
serde_json = "1"
dirs = "5"
